--- a/appsettings.json
+++ b/appsettings.json
@@ -1,7 +1,7 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-ExpenseTracker-992d9362-10ac-4026-990f-961ef8775ae8;Trusted_Connection=True;MultipleActiveResultSets=true"
-  },
+    "ConnectionStrings": {
+        "DefaultConnection": "Server=JUPTER\\SQLEXPRESS;Database=ExpenseTrackerDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
