--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,6 @@
 {
     "ConnectionStrings": {
-        "DefaultConnection": "Server=JUPTER\\SQLEXPRESS;Database=ExpenseTrackerDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+        "DefaultConnection": "Server=JUPTER\\SQLEXPRESS;Database=ExpenseTrackerDb;Trusted_Connection=True;MultipleActiveResultSets=true;TrustServerCertificate=True"
     },
   "Logging": {
     "LogLevel": {
